--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <body>
       <header></header>
       <main>
+        <div class="container my-3">
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
@@ -33,23 +34,104 @@
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
           </button>
-          <div class="container">
           <div class="carousel-caption d-none d-md-block">
+            <div class="container" style="text-align: end;">
             <h5>Config Bs As</h5>
             <p>Some representative placeholder content for the first slide.</p>
-            <div class="row">
-            <div class="col">
-            <span class="badge badge-light">Quiero ser Orador</span>
-            </div>
-            <div class="col">
-            <span class="badge badge-success">Comprar Tickets</span>
+            <div class="row">            
+              <button type="button" class="btn btn-outline-secondary">Quiero ser Orador</button>                      
+              <button type="button" class="btn btn-success">Comprar Tickets</button>
             </div>
             </div>
-            </div>
-          </div>  
-            
+          </div>        
         </div>
-        
+        <div class="container" style="text-align: center;">
+          <p>CONOCE A LOS</p>
+          <h2>ORADORES</h2>
+        </div>
+<!--CARD DE BOOTSTRAP
+<div class="container">
+  <div class="card-deck">
+  <div class="card">
+    <img src="./Img/bill.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <span class="badge badge-warning">Warning</span>
+      <span class="badge badge-primary">Primary</span>
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa blanditiis libero corporis sit repellat, in delectus et mollitia ex iste illo repellendus enim, similique quisquam vitae! Omnis vel eaque esse.</p>
+    </div>
+  </div>
+  <div class="card">
+    <img src="./Img/ada.jpeg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <span class="badge badge-warning">Warning</span>
+      <span class="badge badge-primary">Primary</span>
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci modi sint numquam consequuntur, eos, culpa repellat sunt quis consequatur ea unde tempore id dolore nulla non. Expedita fugiat eveniet eligendi?</p>
+    </div>
+  </div>
+  <div class="card">
+    <img src="./Img/steve.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <span class="badge badge-warning">Warning</span>
+      <span class="badge badge-primary">Primary</span>
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, accusamus nisi! Ex, nemo beatae tenetur suscipit numquam eaque id earum consequatur aperiam eveniet pariatur praesentium quos quia eos facere sed!</p>    
+    </div>
+   </div>
+  </div>
+</div>
+      -->
+<!--CARDS MANUAL-->
+<div class="row text-center">
+  <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 mb-3">
+    <div class="card shadow">
+      <img src="./Img/bill.jpg" class="card-img-top" alt="...">
+      <div class="card-body">       
+       <span class="badge badge-warning">Warning</span>
+       <span class="badge badge-primary">Primary</span>
+       <h5 class="card-title">BILL GATE</h5>
+       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem cupiditate libero eveniet alias, error blanditiis atque modi distinctio dolores mollitia!</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 mb-3">
+    <div class="card shadow">
+      <img src="./Img/steve.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+       <span class="badge badge-warning">Warning</span>
+       <span class="badge badge-primary">Primary</span>
+       <h5 class="card-title">STEVE JOBS</h5>
+       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem cupiditate libero eveniet alias, error blanditiis atque modi distinctio dolores mollitia!</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 mb-3">
+    <div class="card shadow">
+      <img src="./Img/ada.jpeg" class="card-img-top" alt="...">
+      <div class="card-body">        
+       <span class="badge badge-warning">Warning</span>
+       <span class="badge badge-primary">Primary</span>
+       <h5 class="card-title">ADA LOVELACE</h5>
+       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem cupiditate libero eveniet alias, error blanditiis atque modi distinctio dolores mollitia!</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 ">
+   <img src="./Img/honolulu.jpg" class="img-fluid" alt="...">  
+  </div>
+  <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 " style="background-color: rgb(58, 58, 58);">
+   <h1>Bs As - Octubre</h1>
+   <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat incidunt ex 
+    praesentium quia corrupti. Sapiente aut quod eos mollitia, maxime accusantium voluptates. Aut quidem 
+    fuga alias tempore! Officiis, fugiat facilis!</p>
+    <button type="button" class="btn btn-outline-secondary">Secondary</button>
+  </div>
+</div>
+</div>
       </main>
       <footer>
         <a href="https://www.google.com" style="background-color: aqua;border: 2px solid black;">IR A GOOGLE</a>
