--- a/index.html
+++ b/index.html
@@ -131,6 +131,32 @@
     <button type="button" class="btn btn-outline-secondary">Secondary</button>
   </div>
 </div>
+
+<div class="text-center">
+  <p>CONVIERTETE EN UN</p>
+  <h1>ORADOR</h1>
+  <p>Anotate como orador para dar una charla ignite. Cuentanos de que quieres hablar </p>
+</div>
+
+<div>
+  <form>
+    <div class="form-row">
+      <div class="col">
+        <input type="text" class="form-control" placeholder="Nombre">
+      </div>
+      <div class="col">
+        <input type="text" class="form-control" placeholder="Apellido">
+      </div>
+    </div>
+    <div class="mb-2">
+      <label for="validationTextarea"></label>
+      <textarea class="form-control" id="validationTextarea" placeholder="Sobre que quieres hablar??" required></textarea>
+      
+       Recuerda incluir un titulo para tu charla.
+      
+  </form>
+</div>
+
 </div>
       </main>
       <footer>
