--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     </div>
     <div class="mb-2">
       <label for="validationTextarea"></label>
-      <textarea class="form-control" id="validationTextarea" placeholder="Sobre que quieres hablar??" required></textarea>
+      <textarea class="form-label" id="validationTextarea" rows="7" cols="12" placeholder="Sobre que quieres hablar??" required></textarea>
       
        Recuerda incluir un titulo para tu charla.
       
