--- a/index.html
+++ b/index.html
@@ -11,37 +11,41 @@
     <title>BOOTSTRAP TRABAJO FINAL</title>
   </head>
   <body>
-      <header class="container">
-        <div class="row">
+      <header class="container-fluid" style="background-color: rgb(51, 50, 50);">
+        
+          <div class="row">
           <div class="col">
-    <div style="align-items: center;">
+    <div style="align-items: center; color: white; text-align: center;">
         <img src="./img/codoacodo.png" width="60" height="60" alt="">
       Buenos Aires
     </div>
   </div>  
   <div class="row" style="align-items: center;">
-        <ul class="nav justify-content-end">
+        <div class="container">
+        <ul class="nav justify-content-center">
           <li class="nav-item">
-            <a class="nav-link active" href="#">La Conferencia</a>
+            <a class="nav-link" href="#" style="color: white;">La Conferencia</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Los Oradores</a>
+            <a class="nav-link" href="#" style="color: rgb(156, 150, 150)">Los Oradores</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Lugar y fecha</a>
+            <a class="nav-link" href="#" style="color: rgb(156, 150, 150)">Lugar y fecha</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled">Conviertete en Orador</a>
+            <a class="nav-link" href="#" style="color: rgb(156, 150, 150);">Conviertete en Orador</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="#">Comprar Tickets</a>
+            <a class="nav-link" href="#" style="color: rgb(8, 190, 8);">Comprar Tickets</a>
           </li>
         </ul>
       </div>
-      </div>
-      </header>
-      <main>
-        <div class="container-fluid my-3">
+    </div>
+      </div>   
+       </header>
+
+      <main>        
+        <div class=" container-fluid mb-3">
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
@@ -197,7 +201,7 @@
 <button type="button" class="btn btn-success btn-lg btn-block">ENVIAR</button>
 </div>
 
-<div class="mt-3" style="background-color: aquamarine;">
+<div class="mt-3" style="background-color: rgb(85, 95, 151);">
   <div class="container">
   <ul class="nav nav-pills nav-justified">          
     <li class="nav-item">
