--- a/index.html
+++ b/index.html
@@ -201,29 +201,29 @@
 <button type="button" class="btn btn-success btn-lg btn-block">ENVIAR</button>
 </div>
 
-<div class="mt-3" style="background-color: rgb(85, 95, 151);">
+<div class="mt-3" style="background-color: rgb(7, 94, 175);">
   <div class="container">
   <ul class="nav nav-pills nav-justified">          
     <li class="nav-item">
-      <a class="nav-link" href="#">Preguntas Frecuentes</a>
+      <a class="nav-link" href="#" style="color: white;">Preguntas Frecuentes</a>
     </li>        
     <li class="nav-item">
-      <a class="nav-link" href="#">Contactanos</a>
+      <a class="nav-link" href="#" style="color: white;">Contactanos</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Prensa</a>
+      <a class="nav-link" href="#" style="color: white;">Prensa</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Conferencias</a>
+      <a class="nav-link" href="#" style="color: white;">Conferencias</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Terminos y Condiciones</a>
+      <a class="nav-link" href="#" style="color: white;">Terminos y Condiciones</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Privacidad</a>
+      <a class="nav-link" href="#" style="color: white;">Privacidad</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Estudiantes</a>
+      <a class="nav-link" href="#" style="color: white;">Estudiantes</a>
     </li>
   </ul>
 </div>
