--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <title>BOOTSTRAP TRABAJO FINAL</title>
   </head>
   <body>
-      <header class="container-fluid" style="background-color: rgb(51, 50, 50);">
-        
+      <header>
+        <section class="container-fluid" style="background-color: rgb(51, 50, 50);">
           <div class="row">
           <div class="col">
-    <div style="align-items: center; color: white; text-align: center;">
+    <div style="align-items: center; color: white; text-align: start;">
         <img src="./img/codoacodo.png" width="60" height="60" alt="">
       Buenos Aires
     </div>
@@ -41,11 +41,12 @@
         </ul>
       </div>
     </div>
-      </div>   
+      </div>
+    </section>   
        </header>
 
       <main>        
-        <div class=" container-fluid mb-3">
+       <section class="container-fluid mb-3">
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
@@ -70,12 +71,12 @@
             <div class="container" style="text-align: end;">
             <h5>Config Bs As</h5>
             <p>Some representative placeholder content for the first slide.</p>         
-            <button type="button" class="btn btn-outline-secondary">Quiero ser Orador</button>                      
+            <button type="button" class="btn btn-outline-secondary">Quiero ser Orador</button>                     
             <button type="button" class="btn btn-success">Comprar Tickets</button>         
             </div>
           </div>        
         </div>
-      </div>
+      </section>
 
         <div class="container" style="text-align: center;">
           <p>CONOCE A LOS</p>
@@ -115,7 +116,7 @@
 </div>
       -->
 <!--CARDS MANUAL-->
-<div class="container">
+<section class="container">
 <div class="row text-center">
   <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 mb-3">
     <div class="card shadow">
@@ -151,9 +152,9 @@
     </div>
   </div>
 </div>
-</div>
+</section>
 
-<div class="container-fluid">
+<section class="container-fluid ">
 <div class="row my-3">
   <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
    <img src="./Img/honolulu.jpg" class="img-fluid" alt="...">  
@@ -165,7 +166,7 @@
     <button type="button" class="btn btn-outline-secondary">Secondary</button>
   </div>
 </div>
-</div>
+</section>
 
 <div class="container">
 <div class="text-center">
@@ -201,7 +202,7 @@
 <button type="button" class="btn btn-success btn-lg btn-block">ENVIAR</button>
 </div>
 
-<div class="mt-3" style="background-color: rgb(7, 94, 175);">
+<section class="mt-3" style="background-color: rgb(7, 94, 175);">
   <div class="container">
   <ul class="nav nav-pills nav-justified">          
     <li class="nav-item">
@@ -227,7 +228,7 @@
     </li>
   </ul>
 </div>
-</div>
+</section>
       </main>
 
       <footer>
