--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
      <link rel="stylesheet" href="./Css/style.css">
     <title>BOOTSTRAP TRABAJO FINAL</title>
+    <!--ANIMACIONES LINK-->
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
   </head>
   <body>
       <header>
@@ -79,8 +84,8 @@
       </section>
 
         <div class="container" style="text-align: center;">
-          <p>CONOCE A LOS</p>
-          <h2>ORADORES</h2>
+          <p class="animate__animated animate__backInRight">CONOCE A LOS</p>
+          <h2 class="animate__animated animate__backInLeft">ORADORES</h2>
         </div>
 <!--CARD DE BOOTSTRAP
 <div class="container">
@@ -160,8 +165,8 @@
    <img src="./Img/honolulu.jpg" class="img-fluid" alt="...">  
   </div>
   <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6" style="background-color: rgb(58, 58, 58);">
-   <h1>Bs As - Octubre</h1>
-   <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat incidunt ex 
+   <h1 style="color: white;">Bs As - Octubre</h1>
+   <p class="text-justify" style="color: white;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat incidunt ex 
     praesentium quia corrupti. Sapiente aut quod eos mollitia, maxime accusantium voluptates.</p>
     <button type="button" class="btn btn-outline-secondary">Secondary</button>
   </div>
@@ -170,8 +175,8 @@
 
 <div class="container">
 <div class="text-center">
-  <p>CONVIERTETE EN UN</p>
-  <h1>ORADOR</h1>
+  <p class="animate__animated animate__bounceInDown">CONVIERTETE EN UN</p>
+  <h1 class="animate__animated animate__bounceInUp">ORADOR</h1>
   <p>Anotate como orador para dar una charla ignite. Cuentanos de que quieres hablar </p>
 </div>
 
@@ -231,7 +236,8 @@
 </section>
       </main>
 
-      <footer>
+      <footer style="text-align: center; color: black;">
+        &COPY; 2023 COPYRIGHT ALL RIGHTS RESERVED
       <!-- <div class="container">
         <ul class="nav nav-pills nav-justified">          
           <li class="nav-item">
