--- a/index.html
+++ b/index.html
@@ -83,9 +83,11 @@
         </div>
       </section>
 
-        <div class="container" style="text-align: center;">
+        <div id="text" class="container" style="text-align: center;">
+          
           <p class="animate__animated animate__backInRight">CONOCE A LOS</p>
           <h2 class="animate__animated animate__backInLeft">ORADORES</h2>
+                
         </div>
 <!--CARD DE BOOTSTRAP
 <div class="container">
