--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
 
         <div id="text" class="container" style="text-align: center;">
           
-          <p class="animate__animated animate__backInRight">CONOCE A LOS</p>
-          <h2 class="animate__animated animate__backInLeft">ORADORES</h2>
+          <p class="animate__animated animate__backInRight animate__repeat-2">CONOCE A LOS</p>
+          <h2 class="animate__animated animate__backInLeft animate__repeat-2">ORADORES</h2>
                 
         </div>
 <!--CARD DE BOOTSTRAP
@@ -177,8 +177,8 @@
 
 <div class="container">
 <div class="text-center">
-  <p class="animate__animated animate__bounceInDown">CONVIERTETE EN UN</p>
-  <h1 class="animate__animated animate__bounceInUp">ORADOR</h1>
+  <p class="animate__animated animate__bounceInDown animate__repeat-2">CONVIERTETE EN UN</p>
+  <h1 class="animate__animated animate__bounceInUp animate__repeat-2">ORADOR</h1>
   <p>Anotate como orador para dar una charla ignite. Cuentanos de que quieres hablar </p>
 </div>
 
