--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
           <div class="carousel-caption d-none d-md-block">
             <div class="container" style="text-align: end;">
             <h5>Config Bs As</h5>
-            <p>Some representative placeholder content for the first slide.</p>         
+            <p class="text-justify" style="color: white;">Bs As llega por primera vez a Argentina. Un evento para compartir con nuestra comunidad el conocimiento y experiencia de los expertos que estan creando el futuro de internet.
+              Ven a conocer a mienbros del evento, a otros estudiantes de Codo a Codo y los oradores de primer nivel que tenemos para ti. Te esperamos! </p>         
             <button type="button" class="btn btn-outline-secondary">Quiero ser Orador</button>                     
             <button type="button" class="btn btn-success">Comprar Tickets</button>         
             </div>
@@ -168,8 +169,9 @@
   </div>
   <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6" style="background-color: rgb(58, 58, 58);">
    <h1 style="color: white;">Bs As - Octubre</h1>
-   <p class="text-justify" style="color: white;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat incidunt ex 
-    praesentium quia corrupti. Sapiente aut quod eos mollitia, maxime accusantium voluptates.</p>
+   <p class="text-justify" style="color: white;">Buenos Aires es la provincia y la localidad mas grande del estado de Argentina, en los Estados Unidos, Honolulu es la mas sureña 
+  de entre las principales ciudades estadounidenses. Aunque el nombre de Honolulu se refiere al area urbana en la costa sureste de la isla de Oahu y el condaddo de Honolulu han formado una ciudad-
+condado consolidada que cubre toda la ciudad (aproximadamente 600 km2 de superficie).</p>
     <button type="button" class="btn btn-outline-secondary">Secondary</button>
   </div>
 </div>
