--- a/index.html
+++ b/index.html
@@ -84,11 +84,9 @@
         </div>
       </section>
 
-        <div id="text" class="container" style="text-align: center;">
-          
+        <div id="text" class="container" style="text-align: center;">          
           <p class="animate__animated animate__backInRight animate__repeat-2">CONOCE A LOS</p>
-          <h2 class="animate__animated animate__backInLeft animate__repeat-2">ORADORES</h2>
-                
+          <h2 class="animate__animated animate__backInLeft animate__repeat-2">ORADORES</h2>                
         </div>
 <!--CARD DE BOOTSTRAP
 <div class="container">
@@ -183,8 +181,6 @@ condado consolidada que cubre toda la ciudad (aproximadamente 600 km2 de superfi
   <h1 class="animate__animated animate__bounceInUp animate__repeat-2">ORADOR</h1>
   <p>Anotate como orador para dar una charla ignite. Cuentanos de que quieres hablar </p>
 </div>
-
-
   <form>
     <div class="form-row">
       <div class="col">
@@ -194,7 +190,6 @@ condado consolidada que cubre toda la ciudad (aproximadamente 600 km2 de superfi
         <input type="text" class="form-control" placeholder="Apellido">
       </div>
     </div>
-
     <!--
     <div class="form-group">
       <label for="validationTextarea"></label>
@@ -203,7 +198,6 @@ condado consolidada que cubre toda la ciudad (aproximadamente 600 km2 de superfi
       </div>
       </div>-->  
   </form>
-
 <div class="form-group my-3">   
   <textarea class="form-control" rows="5" id="comentarios" name="comentarios" placeholder="Sobre que quieres hablar??"></textarea>
   <label for="comentarios">Recuerda incluir un titulo para tu charla.</label>
@@ -241,7 +235,7 @@ condado consolidada que cubre toda la ciudad (aproximadamente 600 km2 de superfi
       </main>
 
       <footer style="text-align: center; color: black;">
-        &COPY; 2023 COPYRIGHT ALL RIGHTS RESERVED
+        &copy; 2023 Copyrights All Rights Reserved
       <!-- <div class="container">
         <ul class="nav nav-pills nav-justified">          
           <li class="nav-item">
