--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
     </section>   
        </header>
 
-      <main>        
+      <main>
+        <!--      
        <section class="container-fluid mb-3">
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner">
@@ -72,17 +73,78 @@
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
           </button>
-          <div class="carousel-caption d-none d-md-block">
-            <div class="container" style="text-align: end;">
+          <div class="carousel-caption d-block">
+            <br>            
+            <div style="text-align: end;">
             <h5>Config Bs As</h5>
-            <p class="text-justify" style="color: white;">Bs As llega por primera vez a Argentina. Un evento para compartir con nuestra comunidad el conocimiento y experiencia de los expertos que estan creando el futuro de internet.
-              Ven a conocer a mienbros del evento, a otros estudiantes de Codo a Codo y los oradores de primer nivel que tenemos para ti. Te esperamos! </p>         
+            <p>Bs As llega por primera vez a Argentina. Un evento para compartir con nuestra 
+              comunidad el conocimiento y experiencia de los expertos que estan creando el 
+              futuro de internet.Ven a conocer a mienbros del evento, a otros estudiantes de 
+              Codo a Codo y los oradores de primer nivel que tenemos para ti. Te esperamos!</p>         
+            <button type="button" class="btn btn-outline-secondary">Quiero ser Orador</button>                     
+            <button type="button" class="btn btn-success">Comprar Tickets</button>         
+            
+          </div>
+          </div>        
+        </div>
+      </section>-->
+      <section class="mb-3"> 
+      <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="./Img/ba1.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-md-block">
+              <div style="text-align: end;">
+              <h5>Conf Bs As</h5>
+              <p>Bs As llega por primera vez a Argentina. Un evento para compartir con nuestra 
+                comunidad el conocimiento y experiencia de los expertos que estan creando el 
+                futuro de internet.Ven a conocer a mienbros del evento, a otros estudiantes de 
+                Codo a Codo y los oradores de primer nivel que tenemos para ti. Te esperamos!</p>
+            <button type="button" class="btn btn-outline-secondary">Quiero ser Orador</button>                     
+            <button type="button" class="btn btn-success">Comprar Tickets</button> 
+          </div> 
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="./Img/ba2.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-md-block" style="text-align: end;">
+              <h5>Conf Bs As</h5>
+              <p>Bs As llega por primera vez a Argentina. Un evento para compartir con nuestra 
+                comunidad el conocimiento y experiencia de los expertos que estan creando el 
+                futuro de internet.Ven a conocer a mienbros del evento, a otros estudiantes de 
+                Codo a Codo y los oradores de primer nivel que tenemos para ti. Te esperamos!</p>
             <button type="button" class="btn btn-outline-secondary">Quiero ser Orador</button>                     
             <button type="button" class="btn btn-success">Comprar Tickets</button>         
             </div>
-          </div>        
+          </div>
+          <div class="carousel-item">
+            <img src="./Img/ba3.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-md-block" style="text-align: end;">
+              <h5>Conf Bs As</h5>
+              <p>Bs As llega por primera vez a Argentina. Un evento para compartir con nuestra 
+                comunidad el conocimiento y experiencia de los expertos que estan creando el 
+                futuro de internet.Ven a conocer a mienbros del evento, a otros estudiantes de 
+                Codo a Codo y los oradores de primer nivel que tenemos para ti. Te esperamos!</p>
+            <button type="button" class="btn btn-outline-secondary">Quiero ser Orador</button>                     
+            <button type="button" class="btn btn-success">Comprar Tickets</button>         
+            </div>
+          </div>
         </div>
-      </section>
+        <button class="carousel-control-prev" type="button" data-target="#carouselExampleCaptions" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-target="#carouselExampleCaptions" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </button>
+      </div>
+    </section> 
 
         <div id="text" class="container" style="text-align: center;">          
           <p class="animate__animated animate__backInRight animate__repeat-2">CONOCE A LOS</p>
@@ -170,7 +232,7 @@
    <p class="text-justify" style="color: white;">Buenos Aires es la provincia y la localidad mas grande del estado de Argentina, en los Estados Unidos, Honolulu es la mas sureña 
   de entre las principales ciudades estadounidenses. Aunque el nombre de Honolulu se refiere al area urbana en la costa sureste de la isla de Oahu y el condaddo de Honolulu han formado una ciudad-
 condado consolidada que cubre toda la ciudad (aproximadamente 600 km2 de superficie).</p>
-    <button type="button" class="btn btn-outline-secondary">Secondary</button>
+    <button type="button" class="btn btn-outline-secondary">Conocer mas</button>
   </div>
 </div>
 </section>
