--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <div class="row">
           <div class="col">
     <div style="align-items: center; color: white; text-align: start;">
-        <img src="./img/codoacodo.png" width="60" height="60" alt="">
+        <img src="./Img/codoacodo.png" width="60" height="60" alt="">
       Buenos Aires
     </div>
   </div>  
