--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <a class="nav-link" href="#" style="color: rgb(156, 150, 150);">Conviertete en Orador</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" style="color: rgb(8, 190, 8);">Comprar Tickets</a>
+            <a class="nav-link" href="./comprarTicket.html" style="color: rgb(8, 190, 8); ">Comprar Tickets</a>
           </li>
         </ul>
       </div>
@@ -105,7 +105,7 @@
                 comunidad el conocimiento y experiencia de los expertos que estan creando el 
                 futuro de internet.Ven a conocer a mienbros del evento, a otros estudiantes de 
                 Codo a Codo y los oradores de primer nivel que tenemos para ti. Te esperamos!</p>
-            <button type="button" class="btn btn-outline-secondary">Quiero ser Orador</button>                     
+            <button type="button" class="btn btn-outline-secondary">Quiero ser Orador</button>
             <button type="button" class="btn btn-success">Comprar Tickets</button> 
           </div> 
             </div>
